# wykobi

./: .gitignore  CMakeLists.txt  README.md  remove_install.sh
example/: CMakeLists.txt  wykobi_build.cpp
example/src/: CMakeLists.txt  wykobi_build.cpp
src/: CMakeLists.txt  wykobi.hpp  wykobi_algorithm.hpp  wykobi_graphics_opengl.hpp  wykobi_gui.hpp  wykobi_instantiate.cpp  wykobi_math.hpp  wykobi_matrix.hpp  wykobi_nd.hpp
